--- a/one_page_website.html
+++ b/one_page_website.html
@@ -8,7 +8,7 @@
 	<main>
 
 	<style>
-	h1, form { 
+	h1, form, nav { 
 		text-align: center;
 	}
 	h2 {
@@ -21,11 +21,11 @@
 		<em>this planet is an explorers paradise!</em></h1>
 		
 		<nav>
-	<p><a href="#Mons">Olympus Mons</a></p>
-	<p><a href="#Marineris">Valles Marineris</a></p>
-	<p><a href="#Moons">Phobos and Deimos</a></p>
-	<p><a href="#Video">NatGeo Video</a></p>
-	<p><a href="#Form">Contact Info</a></p>
+	<a href="#Mons">Olympus Mons |</a>
+	<a href="#Marineris">Valles Marineris |</a>
+	<a href="#Moons">Phobos and Deimos |</a>
+	<a href="#Video">NatGeo Video |</a>
+	<a href="#Form">Contact Info</a>
 		</nav>
 		
 		<h2 id="Mons">Olympus Mons</h2>
