--- a/one_page_website.html
+++ b/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Explore the red planet | Mars</title>
 		<meta charset= "utf-8">
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 		<body>
 	<main>
@@ -60,13 +61,21 @@
 	</iframe>
 	<p>	</p>
 				<h2>Enter your information for a chance to win a trip to Mars!</h2>
-		<form id="Form" action="" method="get">
-			First name: <input type="text" name="First_Name"><br>
-			Last name: <input type="text" name="Last_Name"><br>
-			Email: <input type="Email" name="Email"><br>
-			Phone Number: <input type="number" name="Phone"><br>
-			<input type ="submit" value="submit"
-		</form>
+				<div class="form-rsvp">
+					<form action="" method="post">
+						<input class="rsvp" type="text" value="" placeholder="First Name">
+						<input class="rsvp" type="text" value="" placeholder="Last Name">
+						<input class="rsvp" type="text" value="" placeholder="Email Address">
+						<input class="rsvp" type="text" value="" placeholder="Phone Number">
+						<div class="form-spacer">
+							<label class="terms">Terms and Conditions</label>
+						</div>
+						<div class="submit">
+							<input type="submit" value="submit">
+						</div>
+					</form>
+
+				</div>
 	<footer>
 		<h4>Ericks' Explorers Foundation &copy;</h4>
 	</footer>
